refactor(tests): replace assertDoesNotThrow with assertJ substitute