@@ -16,8 +16,9 @@
  */
 package org.operaton.bpm.model.bpmn.instance.operaton;
 
-import java.util.Arrays;
 import java.util.Collection;
+
+import java.util.List;
 
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -25,7 +26,7 @@ import org.junit.jupiter.api.Test;
 import org.operaton.bpm.model.bpmn.instance.BpmnModelElementInstanceTest;
 
 import static org.operaton.bpm.model.bpmn.impl.BpmnModelConstants.OPERATON_NS;
-import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.assertj.core.api.Assertions.assertThatCode;
 
 /**
  * @author Sebastian Menski
@@ -44,15 +45,13 @@ class OperatonInputParameterTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
-      new AttributeAssumption(OPERATON_NS, "name", false, true)
-    );
+    return List.of(new AttributeAssumption(OPERATON_NS, "name", false, true));
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
-  void testIntputParameterScriptChildAssignment() {
-    assertDoesNotThrow(() -> {
+  void testInputParameterScriptChildAssignment() {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
@@ -61,32 +60,35 @@ class OperatonInputParameterTest extends BpmnModelElementInstanceTest {
       scriptElement.setTextContent("${'a script'}");
 
       inputParamElement.addChildElement(scriptElement);
-    }, "OperatonScript should be accepted as a child element of OperatonInputParameter. Error: ");
+    }).as("OperatonScript should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
   void testInputParameterListChildAssignment() {
-    assertDoesNotThrow(() -> {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
       OperatonList listElement = modelInstance.newInstance(OperatonList.class);
 
       inputParamElement.addChildElement(listElement);
-    }, "OperatonList should be accepted as a child element of OperatonInputParameter. Error: ");
+    }).as("OperatonList should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
   void testInputParameterMapChildAssignment() {
-    assertDoesNotThrow(() -> {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
       OperatonMap listElement = modelInstance.newInstance(OperatonMap.class);
 
       inputParamElement.addChildElement(listElement);
-    }, "OperatonMap should be accepted as a child element of OperatonInputParameter. Error: ");
+    }).as("OperatonMap should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 }
